--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
     <body>
-        asdqwe
+        <iframe style="width: 100%; height: 100%; border: none; margin: 0; padding: 0; background: #fff;" src="https://apps.mywebstor.com/onlineForm/v4/light/index.html?token=aecba3e9250796fb6f2417d9888af6b4"></iframe>
     </body>
 </html>
