--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <iframe style="width: 100%; height: 100%; border: none; margin: 0; padding: 0; background: #fff;" src="https://apps.mywebstor.com/onlineForm/v4/light/index.html?token=aecba3e9250796fb6f2417d9888af6b4"></iframe>
+        <!-- Online Form Bitrix24 -->
+<style>@keyframes radial-pulse {0% {box-shadow: 0 0 0 0px rgba(24, 172, 243, 0.5);}100% {box-shadow: 0 0 0 40px rgba(24, 172, 243, 0);}}</style>
+<script>Window.positionWebstorForm='';window.colorWebstorForm="#18ACF3";window.webstorFormId="aecba3e9250796fb6f2417d9888af6b4";window.styleWebstorForm="light";</script>
+<script src="https://apps.mywebstor.com/onlineForm/v4/button.min.js"></script>
+<!-- End online Form Bitrix24 -->
+
     </body>
 </html>
