--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <body>
         <!-- Online Form Bitrix24 -->
-<style>@keyframes radial-pulse {0% {box-shadow: 0 0 0 0px rgba(24, 172, 243, 0.5);}100% {box-shadow: 0 0 0 40px rgba(24, 172, 243, 0);}}</style>
-<script>Window.positionWebstorForm='';window.colorWebstorForm="#18ACF3";window.webstorFormId="aecba3e9250796fb6f2417d9888af6b4";window.styleWebstorForm="light";</script>
-<script src="https://apps.mywebstor.com/onlineForm/v4/button.min.js"></script>
+<style>@keyframes radial-pulse {0% {box-shadow: 0 0 0 0px rgba(252, 234, 49, 0.5);}100% {box-shadow: 0 0 0 40px rgba(252, 234, 49, 0);}}</style>
+<script>Window.positionWebstorForm='rb';window.colorWebstorForm="#FCEA31";window.webstorFormId="1542681c16c1d26b56cbd4c8f7a7b6f6";window.styleWebstorForm="black";</script>
+<script src="https://apps.mywebstor.com/onlineForm/v4/widget.min.js"></script>
 <!-- End online Form Bitrix24 -->
 
     </body>
