--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <body>
         
-        <style>@keyframes radial-pulse {0% {box-shadow: 0 0 0 0px rgba(24, 172, 243, 0.5);}100% {box-shadow: 0 0 0 40px rgba(24, 172, 243, 0);}}</style>
-        <script>Window.positionWebstorForm='';window.colorWebstorForm="#18ACF3";window.webstorFormId="a56d4ff5b750d6594c88695fb3c0b390";window.styleWebstorForm="light";</script>
-        <script src="https://apps.mywebstor.com/onlineForm/v4/button.min.js"></script>
+<!-- Online Form Bitrix24 -->
+<style>@keyframes radial-pulse {0% {box-shadow: 0 0 0 0px rgba(24, 172, 243, 0.5);}100% {box-shadow: 0 0 0 40px rgba(24, 172, 243, 0);}}</style>
+<script>Window.positionWebstorForm='';window.colorWebstorForm="#18ACF3";window.webstorFormId="a56d4ff5b750d6594c88695fb3c0b390";window.styleWebstorForm="light";</script>
+<script src="https://apps.mywebstor.com/onlineForm/v4/button.min.js"></script>
+<!-- End online Form Bitrix24 -->
 
     </body>
 </html>
