--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
 <html>
     <body>
         <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script>
+            (function(w,d,u){
+                    var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
+                    var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+            })(window,document,'https://med.mywebstor.com/upload/crm/site_button/loader_1_ueyei1.js');
+        </script>
     </body>
 </html>
